Removing OSVDB URLs. https://blog.osvdb.org/2016/04/05/osvdb-fin/

--- a/yamls/bugzilla.yml
+++ b/yamls/bugzilla.yml
@@ -7,9 +7,9 @@
 # CVE-2012-0453
 # CVE-2012-0453
 # CVE-2011-0465
-# CVE-2012-0465 4.2.1   http://osvdb.org/81262
+# CVE-2012-0465 4.2.1
 # CVE-2012-0466
-# CVE-2012-0466 4.2.1   http://osvdb.org/81263
+# CVE-2012-0466 4.2.1
 # CVE-2012-1968
 # CVE-2012-1968
 # CVE-2012-1969
@@ -21,8 +21,8 @@
 # CVE-2012-4199
 # CVE-2012-5475
 # CVE-2013-0785
-# CVE-2013-0785 4.2.5/4.0.10/3.6.13 http://osvdb.org/90404
-# CVE-2013-0786 4.2.5/4.0.10/3.6.13 http://osvdb.org/90397
+# CVE-2013-0785 4.2.5/4.0.10/3.6.13
+# CVE-2013-0786 4.2.5/4.0.10/3.6.13
 # CVE-2013-1733
 # CVE-2013-1734
 # CVE-2013-1742
