--- a/yamls/espocrm.yml
+++ b/yamls/espocrm.yml
@@ -1,5 +1,5 @@
 # URL: http://www.espocrm.com/ http://sourceforge.net/projects/espocrm/
-# CVE-2014-8330 2.4.0 http://osvdb.org/109977
+# CVE-2014-8330 2.4.0
 # CVE-2014-7985 2.6.0 https://www.htbridge.com/advisory/HTB23238
 # CVE-2014-7986 2.6.0 https://www.htbridge.com/advisory/HTB23238
 # CVE-2014-7987 2.6.0 https://www.htbridge.com/advisory/HTB23238
