--- a/yamls/impresscms.yml
+++ b/yamls/impresscms.yml
@@ -1,5 +1,5 @@
 # CVE-2010-4616 1.2.4   HTB22766
-# CVE-2012-0986 1.3.1/1.2.7 http://osvdb.org/78142 http://osvdb.org/78143 HTB23064
+# CVE-2012-0986 1.3.1/1.2.7 HTB23064
 # CVE-2012-0987 1.2.7   HTB23064
 # CVE-2014-1836 1.3.6   https://github.com/pedrib/PoC/blob/master/impresscms-1.3.5.txt
 # CVE-2014-4036 1.3.7
