--- a/yamls/squirrelmail.yml
+++ b/yamls/squirrelmail.yml
@@ -1,5 +1,5 @@
 # URL: http://squirrelmail.org/
-# CVE-2010-4554 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-12 http://osvdb.org/74083
+# CVE-2010-4554 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-12
 # CVE-2010-4555 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
 # CVE-2011-2752 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
 # CVE-2011-2753 1.4.22  http://www.squirrelmail.org/security/issue/2011-07-11
