--- a/yamls/mybb.yml
+++ b/yamls/mybb.yml
@@ -1,37 +1,25 @@
 # URL: http://www.mybb.com/downloads
-# CVE-2010-4522         http://osvdb.org/69979 http://osvdb.org/69980
-# CVE-2010-4624         http://osvdb.org/70278 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4625         http://osvdb.org/70277 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4626         http://osvdb.org/63839 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
-# CVE-2010-4627         http://osvdb.org/63840 http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4522
+# CVE-2010-4624         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4625         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4626         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
+# CVE-2010-4627         http://blog.mybb.com/2010/04/13/mybb-1-4-12-released-security-maintenance-update/
 # CVE-2010-4628
 # CVE-2010-4629
-# CVE-2009-4448         http://osvdb.org/61419 http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
-# CVE-2009-4449         http://osvdb.org/61359 http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
-# N/A           1.6.1   http://osvdb.org/71314
-# CVE-2010-5096 1.6.1   http://osvdb.org/70013 http://osvdb.org/70014 http://yehg.net/lab/pr0js/advisories/%5Bmybb1.6%5D_sql_injection
-# CVE-2012-2324 1.6.7   http://osvdb.org/81776 http://osvdb.org/81777 http://osvdb.org/81778 http://osvdb.org/81779 http://osvdb.org/81780
+# CVE-2009-4448         http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
+# CVE-2009-4449         http://blog.mybboard.net/2009/12/29/mybb-1-4-11-released-minor-patch-security-update/
+# CVE-2010-5096 1.6.1   http://yehg.net/lab/pr0js/advisories/%5Bmybb1.6%5D_sql_injection
+# CVE-2012-2324 1.6.7
 # CVE-2012-2325         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
 # CVE-2012-2326         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
 # CVE-2012-2327         http://blog.mybb.com/2012/04/01/mybb-1-6-7-update-1-8-development/
-# CVE-2012-5908 N/A     http://osvdb.org/80633
-# CVE-2012-5909 N/A     http://osvdb.org/80634
-# CVE-2013-XXXX N/A     http://osvdb.org/88911
-# CVE-2013-XXXX N/A     http://osvdb.org/88912
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92683
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92684
-# CVE-2013-XXXX N/A     http://osvdb.org/92685
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92686
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92687
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92688
-# CVE-2013-XXXX 1.6.10  http://osvdb.org/92689
-# CVE-2013-7288 1.6.12  http://osvdb.org/101544 http://blog.mybb.com/2013/12/16/mybb-1-6-12-released-security-maintenance-release/
-# CVE-2013-7275 1.6.12  http://osvdb.org/101545
-# N/A           1.6.12  http://osvdb.org/101542
-# N/A           1.6.12  http://osvdb.org/101543
-# CVE-2014-1840 1.6.13  http://osvdb.org/102937 http://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
+# CVE-2012-5908 N/A
+# CVE-2012-5909 N/A
+# CVE-2013-7288 1.6.12  http://blog.mybb.com/2013/12/16/mybb-1-6-12-released-security-maintenance-release/
+# CVE-2013-7275 1.6.12
+# CVE-2014-1840 1.6.13  http://blog.mybb.com/2014/04/25/mybb-1-6-13-released-security-maintenance-release/
 # CVE-2014-XXXX 1.6.14  http://blog.mybb.com/2014/06/30/mybb-1-6-14-released-security-maintenance-release/
-# CVE-2014-5248 1.6.15  http://osvdb.org/109811 http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
+# CVE-2014-5248 1.6.15  http://blog.mybb.com/2014/08/04/mybb-1-6-15-released-security-maintenance-release/
 # CVE-2014-9240 1.8.2
 # CVE-2014-9241 1.8.2
 # CVE-2014-XXXX 1.8.3   http://blog.mybb.com/2014/11/20/mybb-1-8-3-1-6-16-released-security-releases/ CVE requested http://www.openwall.com/lists/oss-security/2014/12/10/14
