--- a/yamls/phpmyadmin.yml
+++ b/yamls/phpmyadmin.yml
@@ -18,7 +18,7 @@
 # CVE-2011-3592
 # CVE-2011-3646
 # CVE-2011-4064
-# CVE-2011-4107         http://osvdb.org/76798
+# CVE-2011-4107
 # CVE-2011-4634
 # CVE-2011-4780
 # CVE-2011-4782
@@ -49,19 +49,19 @@
 # PMASA-2012-2  CVE-2012-1902   3.4.10.2    http://www.phpmyadmin.net/home_page/security/PMASA-2012-2.php
 # PMASA-2012-3  CVE-2012-4219
 # PMASA-2012-4  CVE-2012-4345
-# PMASA-2012-5  CVE-2012-5159           http://osvdb.org/85739 http://www.phpmyadmin.net/home_page/security/PMASA-2012-5.php
+# PMASA-2012-5  CVE-2012-5159               http://www.phpmyadmin.net/home_page/security/PMASA-2012-5.php
 # PMASA-2012-6
 # PMASA-2012-7
-# PMASA-2013-1  CVE-2013-1937   3.5.8   http://osvdb.org/92201 http://www.phpmyadmin.net/home_page/security/PMASA-2013-1.php
-# PMASA-2013-2  CVE-2013-3238   3.5.8.1 http://osvdb.org/92793 http://www.phpmyadmin.net/home_page/security/PMASA-2013-2.php
-# PMASA-2013-3  CVE-2013-3239   3.5.8.1 http://osvdb.org/92792 http://www.phpmyadmin.net/home_page/security/PMASA-2013-3.php
-# PMASA-2013-4  CVE-2013-3240   3.5.8.1 http://osvdb.org/92794 http://www.phpmyadmin.net/home_page/security/PMASA-2013-4.php
-# PMASA-2013-5  CVE-2013-3241   3.5.8.1 http://osvdb.org/92795 http://www.phpmyadmin.net/home_page/security/PMASA-2013-5.php
+# PMASA-2013-1  CVE-2013-1937   3.5.8   http://www.phpmyadmin.net/home_page/security/PMASA-2013-1.php
+# PMASA-2013-2  CVE-2013-3238   3.5.8.1 http://www.phpmyadmin.net/home_page/security/PMASA-2013-2.php
+# PMASA-2013-3  CVE-2013-3239   3.5.8.1 http://www.phpmyadmin.net/home_page/security/PMASA-2013-3.php
+# PMASA-2013-4  CVE-2013-3240   3.5.8.1 http://www.phpmyadmin.net/home_page/security/PMASA-2013-4.php
+# PMASA-2013-5  CVE-2013-3241   3.5.8.1 http://www.phpmyadmin.net/home_page/security/PMASA-2013-5.php
 # PMASA-2013-6  CVE-2013-3742   4.0.3   http://www.phpmyadmin.net/home_page/security/PMASA-2013-6.php
 # PMASA-2013-7  CVE-2013-4729   4.0.4.1 http://www.phpmyadmin.net/home_page/security/PMASA-2013-7.php
 # PMASA-2013-8  CVE-2013-4995   4.0.4.2/3.5.8.2 http://www.phpmyadmin.net/home_page/security/PMASA-2013-8.php
 # PMASA-2013-9  CVE-2013-4996/CVE-2013-4997 4.0.4.2/3.5.8.2 http://www.phpmyadmin.net/home_page/security/PMASA-2013-9.php 4496:XSS for 3.5.x and 4.0.x,4997:XSS for only 3.5.x
-# PMASA-2013-10 CVE-2013-5029   4.0.5   http://osvdb.org/95999 http://www.phpmyadmin.net/home_page/security/PMASA-2013-10.php
+# PMASA-2013-10 CVE-2013-5029   4.0.5   http://www.phpmyadmin.net/home_page/security/PMASA-2013-10.php
 # PMASA-2013-11 CVE-2013-4996   4.0.4.2/3.5.8.2
 # PMASA-2013-12 CVE-2013-4998/CVE-2013-4999/CVE-2013-5000   4.0.4.2/3.5.8.2 http://www.phpmyadmin.net/home_page/security/PMASA-2013-12.php
 # PMASA-2013-13 CVE-2013-5001   4.0.4.2 http://www.phpmyadmin.net/home_page/security/PMASA-2013-13.php
