--- a/yamls/piwik.yml
+++ b/yamls/piwik.yml
@@ -4,13 +4,13 @@
 # CVE-2011-0399
 # CVE-2011-0400
 # CVE-2011-0401
-# CVE-2011-4941         http://osvdb.org/73213http://piwik.org/blog/2011/06/piwik-1-5-security-advisory/
+# CVE-2011-4941         http://piwik.org/blog/2011/06/piwik-1-5-security-advisory/
 # CVE-2012-4541
-# CVE-2012-XXXX 1.7     http://osvdb.org/79303 http://osvdb.org/79304 http://piwik.org/blog/2012/02/7775/
+# CVE-2012-XXXX 1.7     http://piwik.org/blog/2012/02/7775/
 # CVE-2013-0193
 # CVE-2013-0195
-# CVE-2013-1844 1.11    http://osvdb.org/91043 http://piwik.org/blog/2013/03/piwik-1-11/
-# CVE-2013-2633 1.11    http://osvdb.org/91554 http://piwik.org/blog/2013/03/piwik-1-11/
+# CVE-2013-1844 1.11    http://piwik.org/blog/2013/03/piwik-1-11/
+# CVE-2013-2633 1.11    http://piwik.org/blog/2013/03/piwik-1-11/
 # CVE-2015-7815 2.15.0  https://piwik.org/changelog/piwik-2-15-0 http://karmainsecurity.com/KIS-2015-09
 # CVE-2015-7816 2.15.0  https://piwik.org/changelog/piwik-2-15-0 http://karmainsecurity.com/KIS-2015-10
 Piwik:
