--- a/yamls/serendipity.yml
+++ b/yamls/serendipity.yml
@@ -2,16 +2,16 @@
 # Version: serendipity_config.inc.php:$serendipity['version']         = '1.7';
 # NOTE: security email address working
 #
-# http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=611661
-# CVE-2009-4412 1.5     http://osvdb.org/61245
-# CVE-2011-4090         http://osvdb.org/75777 http://osvdb.org/76856
-# CVE-2011-4365         http://osvdb.org/76836
-# CVE-2012-2331         http://osvdb.org/81713
-# CVE-2012-2332 1.6.1   http://osvdb.org/81773
-# CVE-2012-2762 1.6.2   http://osvdb.org/82036
-# CVE-2013-5314 1.6.2   http://osvdb.org/95176 https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
+# https://bugs.debian.org/611661
+# CVE-2009-4412 1.5
+# CVE-2011-4090
+# CVE-2011-4365
+# CVE-2012-2331
+# CVE-2012-2332 1.6.1
+# CVE-2012-2762 1.6.2
+# CVE-2013-5314 1.6.2   https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
 # CVE-2013-XXXX 1.7     http://blog.s9y.org/archives/247-Serendipity-1.7-released.html https://www.mavitunasecurity.com/xss-vulnerabilities-in-serendipity/ NS-13-003
-# CVE-2013-5670 1.7.3   http://osvdb.org/87395 http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html http://www.opensyscom.fr/Actualites/serendipity-xss-vulnerability.html
+# CVE-2013-5670 1.7.3   http://blog.s9y.org/archives/250-Serendipity-1.7.3-released.html http://www.opensyscom.fr/Actualites/serendipity-xss-vulnerability.html
 # CVE-2015-2289 2.0.1   http://blog.s9y.org/archives/263-Serendipity-2.0.1-released.html
 # CVE-2015-6968 2.0.2   http://seclists.org/fulldisclosure/2015/Sep/6 https://blog.curesec.com/article/blog/Serendipity-201-Code-Execution-48.html http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html
 # CVE-2015-6969 2.0.2   http://seclists.org/fulldisclosure/2015/Sep/9 https://blog.curesec.com/article/blog/Serendipity-201-Persistent-XSS-51.html http://blog.s9y.org/archives/265-Serendipity-2.0.2-Security-Fix-Release.html
