--- a/yamls/wikkawiki.yml
+++ b/yamls/wikkawiki.yml
@@ -1,27 +1,19 @@
-# N/A           1.1.3.5     http://osvdb.org/26537
-# N/A           1.1.3.8     http://osvdb.org/26538
-# N/A           1.1.5.0     http://osvdb.org/26539
-# N/A           1.1.6.0     http://osvdb.org/26540
-# CVE-2005-4255 1.1.6.1     http://osvdb.org/21698 SA18015
-# N/A           1.1.6.2     http://osvdb.org/26545
-# N/A           1.1.6.2     http://osvdb.org/26541
-# N/A           1.1.6.2     http://osvdb.org/26542
-# CVE-2006-7050 1.1.6.2     http://osvdb.org/37339
-# N/A           1.1.6.2     http://osvdb.org/26544
-# CVE-2006-7049 1.1.6.2     http://osvdb.org/26543 SA20628
-# CVE-2007-2551 1.1.6.3     http://osvdb.org/35828 SA25181
-# CVE-2007-2552 1.1.6.3     http://osvdb.org/35827
-# CVE-2007-2612 1.1.6.3     http://osvdb.org/35826
-# CVE-2007-2613 1.1.6.3     http://osvdb.org/35825 SA25181
-# N/A           1.1.6.6     http://osvdb.org/51942 SA33956
-# N/A           1.1.6.6     http://osvdb.org/53706 SA34321
-# N/A           1.1.6.7     http://osvdb.org/53705 SA34321
-# N/A           1.1.6.7     http://osvdb.org/53707 SA34321
-# CVE-2011-4448 1.3.2-p7    http://osvdb.org/77390 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
-# CVE-2011-4449 1.3.2-p7    http://osvdb.org/77391 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
-# CVE-2011-4450 1.3.2-p7    http://osvdb.org/77392 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
-# CVE-2011-4451 1.3.2-p7    http://osvdb.org/77393 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
-# CVE-2011-4452 1.3.2-p7    http://osvdb.org/77394 http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2005-4255 1.1.6.1     SA18015
+# CVE-2006-7050 1.1.6.2
+# CVE-2006-7049 1.1.6.2     SA20628
+# CVE-2007-2551 1.1.6.3     SA25181
+# CVE-2007-2552 1.1.6.3
+# CVE-2007-2612 1.1.6.3
+# CVE-2007-2613 1.1.6.3     SA25181
+# N/A           1.1.6.6     SA33956
+# N/A           1.1.6.6     SA34321
+# N/A           1.1.6.7     SA34321
+# N/A           1.1.6.7     SA34321
+# CVE-2011-4448 1.3.2-p7    http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2011-4449 1.3.2-p7    http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2011-4450 1.3.2-p7    http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2011-4451 1.3.2-p7    http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
+# CVE-2011-4452 1.3.2-p7    http://blog.wikkawiki.org/2011/12/04/security-updates-for-1-3-11-3-2/
 # CVE-2013-5586 1.3.4-p1    http://secunia.com/advisories/54790/ https://www.htbridge.com/advisory/HTB23170
 WikkaWiki:
   1:
